# lexerus

./: .gitignore  Cargo.toml  README.md  README.tpl  rustfmt.toml
.github/workflows/: pages.yml  tests.yml
derive/: Cargo.toml
derive/src/: entrypoint.rs  lib.rs
derive/src/entrypoint/: lexer_impl.rs  tests.rs
derive/src/entrypoint/lexer_impl/: tests.rs
src/: buffer.rs  error.rs  helpers.rs  implementations.rs  lexer.rs  lib.rs  syntax.rs  tests.rs  token.rs
src/buffer/: tests.rs
src/helpers/: eof.rs  groups.rs  infix.rs  lookahead.rs  not.rs  whitespace.rs
src/helpers/infix/: tests.rs
src/implementations/: array.rs  mem.rs  option.rs  phantom.rs  vector.rs
tests/: derive.rs  helpers_group.rs  helpers_group_book_end.rs  helpers_group_until.rs  helpers_not.rs  impl_phantom.rs
tests/common/: mod.rs
